--- a/Exemplos/Exemplos/Exemplos.csproj
+++ b/Exemplos/Exemplos/Exemplos.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Capitulo01\" />
+  </ItemGroup>
 </Project>
