--- a/Exemplos/Exemplos/Exemplos.csproj
+++ b/Exemplos/Exemplos/Exemplos.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Capitulo01\" />
+    <EmbeddedResource Update="Capitulo01\ExemploStepper.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
