--- a/Exemplos/Exemplos/Exemplos.csproj
+++ b/Exemplos/Exemplos/Exemplos.csproj
@@ -15,6 +15,9 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Update="Capitulo01\ExemploSearchBar.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Capitulo01\ExemploStepper.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
