Ajustar textos e adicionar gif para exemplo

--- a/Exemplos/Exemplos.Android/Exemplos.Android.csproj
+++ b/Exemplos/Exemplos.Android/Exemplos.Android.csproj
@@ -91,6 +91,10 @@
       <SubType></SubType>
       <Generator></Generator>
     </AndroidResource>
+    <AndroidResource Include="Resources\drawable\monkey_phone.gif">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
