--- a/Exemplos/Exemplos.iOS/Exemplos.iOS.csproj
+++ b/Exemplos/Exemplos.iOS/Exemplos.iOS.csproj
@@ -136,5 +136,6 @@
   <ItemGroup>
     <BundleResource Include="Resources\banana.png" />
     <BundleResource Include="Resources\monkey.jpg" />
+    <BundleResource Include="Resources\monkey_phone.gif" />
   </ItemGroup>
 </Project>
