--- a/Exemplos/Exemplos/Exemplos.csproj
+++ b/Exemplos/Exemplos/Exemplos.csproj
@@ -22,4 +22,7 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
 </Project>
